// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="flex items-center leading-5 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="flex items-center leading-5 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-700"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 1
          </div>
        </button>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-700"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render with title suffix 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
          <span>
             suffix
          </span>
        </h1>
      </div>
      <div
        class="flex items-center leading-5 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 css-9mualq"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              Header test
              <span>
                 suffix
              </span>
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Subtitle test
          </div>
        </div>
        <div>
          extra
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-8 py-1.5 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      Header test
    </h1>
    extra
  </section>
</DocumentFragment>
`;
